Small command updates
Fix `delete` command reasons
Simplify namespace logic in `getsubpages`
Reformat `info` command embed
Add translated page check for `move` command
Add support for checking if a special page exists in `wikilink` command